// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSchemaCustomization Creates the correct definitions with downloadImages and with connections 1`] = `
Array [
  Array [
    Array [
      "
      type __PREFIX__ShopifyApp {
        shopifyId: String!
      }

      type __PREFIX__ShopifyAppFeedback {
        app: __PREFIX__ShopifyApp!
        link: __PREFIX__ShopifyLink
        messages: [__PREFIX__ShopifyUserError!]!
      }

      enum __PREFIX__ShopifyCountryCode {
        AF
        AX
        AL
        DZ
        AD
        AO
        AI
        AG
        AR
        AM
        AW
        AC
        AU
        AT
        AZ
        BS
        BH
        BD
        BB
        BY
        BE
        BZ
        BJ
        BM
        BT
        BO
        BA
        BW
        BV
        BR
        IO
        BN
        BG
        BF
        BI
        KH
        CA
        CV
        BQ
        KY
        CF
        TD
        CL
        CN
        CX
        CC
        CO
        KM
        CG
        CD
        CK
        CR
        HR
        CU
        CW
        CY
        CZ
        CI
        DK
        DJ
        DM
        DO
        EC
        EG
        SV
        GQ
        ER
        EE
        SZ
        ET
        FK
        FO
        FJ
        FI
        FR
        GF
        PF
        TF
        GA
        GM
        GE
        DE
        GH
        GI
        GR
        GL
        GD
        GP
        GT
        GG
        GN
        GW
        GY
        HT
        HM
        VA
        HN
        HK
        HU
        IS
        IN
        ID
        IR
        IQ
        IE
        IM
        IL
        IT
        JM
        JP
        JE
        JO
        KZ
        KE
        KI
        KP
        XK
        KW
        KG
        LA
        LV
        LB
        LS
        LR
        LY
        LI
        LT
        LU
        MO
        MG
        MW
        MY
        MV
        ML
        MT
        MQ
        MR
        MU
        YT
        MX
        MD
        MC
        MN
        ME
        MS
        MA
        MZ
        MM
        NA
        NR
        NP
        NL
        AN
        NC
        NZ
        NI
        NE
        NG
        NU
        NF
        MK
        NO
        OM
        PK
        PS
        PA
        PG
        PY
        PE
        PH
        PN
        PL
        PT
        QA
        CM
        RE
        RO
        RU
        RW
        BL
        SH
        KN
        LC
        MF
        PM
        WS
        SM
        ST
        SA
        SN
        RS
        SC
        SL
        SG
        SX
        SK
        SI
        SB
        SO
        ZA
        GS
        KR
        SS
        ES
        LK
        VC
        SD
        SR
        SJ
        SE
        CH
        SY
        TW
        TJ
        TZ
        TH
        TL
        TG
        TK
        TO
        TT
        TA
        TN
        TR
        TM
        TC
        TV
        UG
        UA
        AE
        GB
        US
        UM
        UY
        UZ
        VU
        VE
        VN
        VG
        WF
        EH
        YE
        ZM
        ZW
        ZZ
      }

      enum __PREFIX__ShopifyCurrencyCode {
        USD
        EUR
        GBP
        CAD
        AFN
        ALL
        DZD
        AOA
        ARS
        AMD
        AWG
        AUD
        BBD
        AZN
        BDT
        BSD
        BHD
        BIF
        BZD
        BMD
        BTN
        BAM
        BRL
        BOB
        BWP
        BND
        BGN
        MMK
        KHR
        CVE
        KYD
        XAF
        CLP
        CNY
        COP
        KMF
        CDF
        CRC
        HRK
        CZK
        DKK
        DOP
        XCD
        EGP
        ETB
        XPF
        FJD
        GMD
        GHS
        GTQ
        GYD
        GEL
        HTG
        HNL
        HKD
        HUF
        ISK
        INR
        IDR
        ILS
        IQD
        JMD
        JPY
        JEP
        JOD
        KZT
        KES
        KWD
        KGS
        LAK
        LVL
        LBP
        LSL
        LRD
        LTL
        MGA
        MKD
        MOP
        MWK
        MVR
        MXN
        MYR
        MUR
        MDL
        MAD
        MNT
        MZN
        NAD
        NPR
        ANG
        NZD
        NIO
        NGN
        NOK
        OMR
        PAB
        PKR
        PGK
        PYG
        PEN
        PHP
        PLN
        QAR
        RON
        RUB
        RWF
        WST
        SAR
        STD
        RSD
        SCR
        SGD
        SDG
        SYP
        ZAR
        KRW
        SSP
        SBD
        LKR
        SRD
        SZL
        SEK
        CHF
        TWD
        THB
        TZS
        TTD
        TND
        TRY
        TMT
        UGX
        UAH
        AED
        UYU
        UZS
        VUV
        VND
        XOF
        YER
        ZMW
        BYN
        BYR @deprecated(reason: \\"\`BYR\` is deprecated. Use \`BYN\` available from version \`2021-01\` onwards instead.\\")
        DJF
        ERN
        FKP
        GIP
        GNF
        IRR
        KID
        LYD
        MRU
        SLL
        SHP
        SOS
        TJS
        TOP
        VEF @deprecated(reason: \\"\`VEF\` is deprecated. Use \`VES\` available from version \`2020-10\` onwards instead.\\")
        VES
        XXX
      }

      type __PREFIX__ShopifyEditableProperty {
        locked: Boolean!
        reason: String
      }

      type __PREFIX__ShopifyFileError {
        code: __PREFIX__ShopifyFileErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyFileErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyFileStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyImage {
        altText: String
        height: Int
        originalSrc: String!
        src: String!
        transformedSrc: String!
        width: Int
      }

      type __PREFIX__ShopifyLink {
        label: String!
        url: String!
      }

      type __PREFIX__ShopifyMoneyV2 {
        amount: Float!
        currencyCode: __PREFIX__ShopifyCurrencyCode!
      }

      type __PREFIX__ShopifyResourceFeedback {
        details: [__PREFIX__ShopifyAppFeedback!]!
        summary: String!
      }

      type __PREFIX__ShopifySEO {
        description: String
        title: String
      }

      type __PREFIX__ShopifyUserError {
        field: [String!]
        message: String!
      }

      enum __PREFIX__ShopifyWeightUnit {
        KILOGRAMS
        GRAMS
        POUNDS
        OUNCES
      }
    ",
      "
      type __PREFIX__ShopifyExternalVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        embeddedUrl: String!
        host: __PREFIX__ShopifyMediaHost!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      interface __PREFIX__ShopifyMedia implements Node @dontInfer {
        alt: String
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      enum __PREFIX__ShopifyMediaContentType {
        VIDEO
        EXTERNAL_VIDEO
        MODEL_3D
        IMAGE
      }

      type __PREFIX__ShopifyMediaError {
        code: __PREFIX__ShopifyMediaErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyMediaErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyMediaHost {
        YOUTUBE
        VIMEO
      }

      type __PREFIX__ShopifyMediaImage implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        createdAt: Date! @dateformat
        fileErrors: [__PREFIX__ShopifyFileError!]!
        fileStatus: __PREFIX__ShopifyFileStatus!
        id: ID!
        image: __PREFIX__ShopifyImage
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        mimeType: String
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyMediaPreviewImage {
        image: __PREFIX__ShopifyImage
        status: __PREFIX__ShopifyMediaPreviewImageStatus!
      }

      enum __PREFIX__ShopifyMediaPreviewImageStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      enum __PREFIX__ShopifyMediaStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyModel3d implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyModel3dSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        sources: [__PREFIX__ShopifyModel3dSource!]!
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyModel3dSource {
        filesize: Int!
        format: String!
        mimeType: String!
        url: String!
      }

      type __PREFIX__ShopifyVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyVideoSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        sources: [__PREFIX__ShopifyVideoSource!]!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyVideoSource {
        format: String!
        height: Int!
        mimeType: String!
        url: String!
        width: Int!
      }
    ",
      "
      type __PREFIX__ShopifyMetafield implements Node @dontInfer {
        createdAt: Date! @dateformat
        description: String
        id: ID!
        key: String!
        legacyResourceId: String!
        namespace: String!
        ownerType: __PREFIX__ShopifyMetafieldOwnerType!
        shopifyId: String!
        type: String!
        updatedAt: Date! @dateformat
        value: String!
        valueType: String! @deprecated(reason: \\"\`valueType\` is deprecated and replaced by \`type\` in API version 2021-07.\\")
      }

      enum __PREFIX__ShopifyMetafieldOwnerType {
        ARTICLE
        BLOG
        COLLECTION
        CUSTOMER
        DRAFTORDER
        ORDER
        PAGE
        PRODUCT
        PRODUCTIMAGE
        PRODUCTVARIANT
        SHOP
      }
    ",
      "
      type __PREFIX__ShopifyProduct implements Node @dontInfer {
        _featuredMedia: String! # Temporary field so we don't break existing users
        createdAt: Date! @dateformat
        description: String!
        descriptionHtml: String!
        featuredImage: __PREFIX__ShopifyImage
        featuredMedia: __PREFIX__ShopifyMedia @link(from: \\"_featuredMedia\\", by: \\"id\\")
        feedback: __PREFIX__ShopifyResourceFeedback
        giftCardTemplateSuffix: String
        handle: String!
        hasOnlyDefaultVariant: Boolean!
        hasOutOfStockVariants: Boolean!
        id: ID!
        isGiftCard: Boolean!
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        mediaCount: Int! @proxy(from: \\"mediaCount.count\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        onlineStorePreviewUrl: String
        onlineStoreUrl: String
        options: [__PREFIX__ShopifyProductOption!]!
        priceRange: __PREFIX__ShopifyProductPriceRange! @deprecated(reason: \\"Deprecated in API version 2020-10. Use \`priceRangeV2\` instead.\\")
        priceRangeV2: __PREFIX__ShopifyProductPriceRangeV2!
        productType: String!
        publishedAt: Date @dateformat
        requiresSellingPlan: Boolean!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        seo: __PREFIX__ShopifySEO!
        shopifyId: String!
        status: __PREFIX__ShopifyProductStatus!
        storefrontId: String!
        tags: [String!]!
        templateSuffix: String
        title: String!
        totalInventory: Int!
        totalVariants: Int!
        tracksInventory: Boolean!
        updatedAt: Date! @dateformat
        variants: [__PREFIX__ShopifyProductVariant!]! @link(from: \\"variants___NODE\\", by: \\"id\\")
        vendor: String!
      }

      type __PREFIX__ShopifyProductOption {
        name: String!
        position: Int!
        shopifyId: String!
        values: [String!]!
      }

      type __PREFIX__ShopifyProductPriceRange {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifyProductPriceRangeV2 {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      enum __PREFIX__ShopifyProductStatus {
        ACTIVE
        ARCHIVED
        DRAFT
      }
    ",
      "
      type __PREFIX__ShopifyProductVariant implements Node @dontInfer {
        _product: String! # Temporary field so we don't break existing users
        availableForSale: Boolean!
        barcode: String
        compareAtPrice: Float
        createdAt: Date! @dateformat
        displayName: String!
        id: ID!
        image: __PREFIX__ShopifyImage
        inventoryPolicy: __PREFIX__ShopifyProductVariantInventoryPolicy!
        inventoryQuantity: Int
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        position: Int!
        presentmentPrices: [__PREFIX__ShopifyProductVariantPricePair!]!
        price: Float!
        product: __PREFIX__ShopifyProduct! @link(from: \\"_product\\", by: \\"id\\")
        requiresShipping: Boolean! @deprecated(reason: \\"Use \`InventoryItem.requiresShipping\` instead.\\")
        selectedOptions: [__PREFIX__ShopifySelectedOption!]!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        sku: String
        shopifyId: String!
        storefrontId: String!
        taxCode: String
        taxable: Boolean!
        title: String!
        updatedAt: Date! @dateformat
        weight: Float
        weightUnit: __PREFIX__ShopifyWeightUnit!
      }

      enum __PREFIX__ShopifyProductVariantInventoryPolicy {
        DENY
        CONTINUE
      }

      type __PREFIX__ShopifyProductVariantPricePair {
        compareAtPrice: __PREFIX__ShopifyMoneyV2
        price: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifySelectedOption {
        name: String!
        value: String!
      }
    ",
      "
      type __PREFIX__ShopifyCollection implements Node @dontInfer {
        description: String!
        descriptionHtml: String!
        feedback: __PREFIX__ShopifyResourceFeedback
        handle: String!
        id: ID!
        image: __PREFIX__ShopifyImage
        legacyResourceId: String!
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        products: [__PREFIX__ShopifyProduct!]! @link(from: \\"products___NODE\\", by: \\"id\\")
        productsCount: Int! @proxy(from: \\"productsCount.count\\")
        ruleSet: __PREFIX__ShopifyCollectionRuleSet
        seo: __PREFIX__ShopifySEO!
        shopifyId: String!
        sortOrder: __PREFIX__ShopifyCollectionSortOrder!
        storefrontId: String!
        templateSuffix: String
        title: String!
        updatedAt: Date! @dateformat
      }

      type __PREFIX__ShopifyCollectionRule {
        column: __PREFIX__ShopifyCollectionRuleColumn!
        condition: String!
        relation: __PREFIX__ShopifyCollectionRuleRelation!
      }

      enum __PREFIX__ShopifyCollectionRuleColumn {
        TAG
        TITLE
        TYPE
        VENDOR
        VARIANT_PRICE
        IS_PRICE_REDUCED
        VARIANT_COMPARE_AT_PRICE
        VARIANT_WEIGHT
        VARIANT_INVENTORY
        VARIANT_TITLE
      }

      enum __PREFIX__ShopifyCollectionRuleRelation {
        CONTAINS
        ENDS_WITH
        EQUALS
        GREATER_THAN
        IS_NOT_SET
        IS_SET
        LESS_THAN
        NOT_CONTAINS
        NOT_EQUALS
        STARTS_WITH
      }

      type __PREFIX__ShopifyCollectionRuleSet {
        appliedDisjunctively: Boolean!
        rules: [__PREFIX__ShopifyCollectionRule!]!
      }

      enum __PREFIX__ShopifyCollectionSortOrder {
        ALPHA_ASC
        ALPHA_DESC
        BEST_SELLING
        CREATED
        CREATED_DESC
        MANUAL
        PRICE_ASC
        PRICE_DESC
      }

      extend type __PREFIX__ShopifyProduct {
        collections: [__PREFIX__ShopifyCollection!]! @link(from: \\"collections___NODE\\", by: \\"id\\")
      }
    ",
      "
      type __PREFIX__ShopifyFulfillmentService {
        callbackUrl: String
        fulfillmentOrdersOptIn: Boolean!
        handle: String!
        inventoryManagement: Boolean!
        productBased: Boolean! @deprecated(reason: \\"\`productBased\` will be removed in version 2024-07, non-product based fulfillment services are no longer supported\\")
        serviceName: String!
        shippingMethods: [__PREFIX__ShopifyShippingMethod!]!
        shopifyId: String!
        type: __PREFIX__ShopifyFulfillmentServiceType!
      }

      enum __PREFIX__ShopifyFulfillmentServiceType {
        GIFT_CARD
        MANUAL
        THIRD_PARTY
      }

      type __PREFIX__ShopifyInventoryItem {
        countryCodeOfOrigin: __PREFIX__ShopifyCountryCode
        createdAt: Date! @dateformat
        duplicateSkuCount: Int!
        harmonizedSystemCode: String
        inventoryHistoryUrl: String
        inventoryLevels: [__PREFIX__ShopifyInventoryLevel!]! @link(by: \\"id\\") @proxy(from: \\"inventoryLevels___NODE\\", fromNode: true)
        legacyResourceId: String!
        locationsCount: Int! @proxy(from: \\"locationsCount.count\\")
        provinceCodeOfOrigin: String
        requiresShipping: Boolean!
        shopifyId: String!
        sku: String
        tracked: Boolean!
        trackedEditable: __PREFIX__ShopifyEditableProperty!
        unitCost: __PREFIX__ShopifyMoneyV2
        updatedAt: Date! @dateformat
        variant: __PREFIX__ShopifyProductVariantConnection!
      }

      type __PREFIX__ShopifyInventoryQuantity {
        name: String!
        quantity: Int!
      }

      type __PREFIX__ShopifyInventoryLevel implements Node @dontInfer {
        _location: String! # Temporary field so we don't break existing users
        quantities: [__PREFIX__ShopifyInventoryQuantity!]!
        available: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"available\\")
        incoming: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"incoming\\")
        committed: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"committed\\")
        reserved: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"reserved\\")
        damaged: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"damaged\\")
        safety_stock: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"safety_stock\\")
        quality_control: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"quality_control\\")
        id: ID!
        location: __PREFIX__ShopifyLocation! @link(from: \\"_location\\", by: \\"id\\")
        shopifyId: String!
      }

      type __PREFIX__ShopifyLocation implements Node @dontInfer {
        activatable: Boolean!
        address: __PREFIX__ShopifyLocationAddress!
        addressVerified: Boolean!
        deactivatable: Boolean!
        deactivatedAt: String
        deletable: Boolean!
        fulfillmentService: __PREFIX__ShopifyFulfillmentService
        fulfillsOnlineOrders: Boolean!
        hasActiveInventory: Boolean!
        hasUnfulfilledOrders: Boolean!
        id: ID!
        isActive: Boolean!
        legacyResourceId: String!
        name: String!
        shipsInventory: Boolean!
        shopifyId: String!
      }

      type __PREFIX__ShopifyLocationAddress {
        address1: String
        address2: String
        city: String
        country: String
        countryCode: String
        formatted: [String!]!
        latitude: Float
        longitude: Float
        phone: String
        province: String
        provinceCode: String
        zip: String
      }

      type __PREFIX__ShopifyShippingMethod {
        code: String!
        label: String!
      }

      extend type __PREFIX__ShopifyProductVariant {
        inventoryItem: __PREFIX__ShopifyInventoryItem!
      }
    ",
      "
      type __PREFIX__ShopifyLineItem implements Node @dontInfer {
        _product: String! # Temporary field so we don't break existing users
        id: ID!
        product: __PREFIX__ShopifyProduct @link(from: \\"_product\\", by: \\"id\\")
        shopifyId: String!
      }

      type __PREFIX__ShopifyOrder implements Node @dontInfer {
        closed: Boolean!
        closedAt: Date @dateformat
        edited: Boolean!
        id: ID!
        lineItems: [__PREFIX__ShopifyLineItem!]! @link(from: \\"lineItems___NODE\\", by: \\"id\\")
        refunds: [__PREFIX__ShopifyRefund!]!
        shopifyId: String!
      }

      type __PREFIX__ShopifyRefund {
        createdAt: Date @dateformat
        shopifyId: String!
      }
    ",
      "
      extend type __PREFIX__ShopifyImage {
        localFile: File @link(from: \\"localFile___NODE\\", by: \\"id\\")
      }
    ",
    ],
  ],
]
`;

exports[`createSchemaCustomization Creates the correct definitions with downloadImages and without connections 1`] = `
Array [
  Array [
    Array [
      "
      type __PREFIX__ShopifyApp {
        shopifyId: String!
      }

      type __PREFIX__ShopifyAppFeedback {
        app: __PREFIX__ShopifyApp!
        link: __PREFIX__ShopifyLink
        messages: [__PREFIX__ShopifyUserError!]!
      }

      enum __PREFIX__ShopifyCountryCode {
        AF
        AX
        AL
        DZ
        AD
        AO
        AI
        AG
        AR
        AM
        AW
        AC
        AU
        AT
        AZ
        BS
        BH
        BD
        BB
        BY
        BE
        BZ
        BJ
        BM
        BT
        BO
        BA
        BW
        BV
        BR
        IO
        BN
        BG
        BF
        BI
        KH
        CA
        CV
        BQ
        KY
        CF
        TD
        CL
        CN
        CX
        CC
        CO
        KM
        CG
        CD
        CK
        CR
        HR
        CU
        CW
        CY
        CZ
        CI
        DK
        DJ
        DM
        DO
        EC
        EG
        SV
        GQ
        ER
        EE
        SZ
        ET
        FK
        FO
        FJ
        FI
        FR
        GF
        PF
        TF
        GA
        GM
        GE
        DE
        GH
        GI
        GR
        GL
        GD
        GP
        GT
        GG
        GN
        GW
        GY
        HT
        HM
        VA
        HN
        HK
        HU
        IS
        IN
        ID
        IR
        IQ
        IE
        IM
        IL
        IT
        JM
        JP
        JE
        JO
        KZ
        KE
        KI
        KP
        XK
        KW
        KG
        LA
        LV
        LB
        LS
        LR
        LY
        LI
        LT
        LU
        MO
        MG
        MW
        MY
        MV
        ML
        MT
        MQ
        MR
        MU
        YT
        MX
        MD
        MC
        MN
        ME
        MS
        MA
        MZ
        MM
        NA
        NR
        NP
        NL
        AN
        NC
        NZ
        NI
        NE
        NG
        NU
        NF
        MK
        NO
        OM
        PK
        PS
        PA
        PG
        PY
        PE
        PH
        PN
        PL
        PT
        QA
        CM
        RE
        RO
        RU
        RW
        BL
        SH
        KN
        LC
        MF
        PM
        WS
        SM
        ST
        SA
        SN
        RS
        SC
        SL
        SG
        SX
        SK
        SI
        SB
        SO
        ZA
        GS
        KR
        SS
        ES
        LK
        VC
        SD
        SR
        SJ
        SE
        CH
        SY
        TW
        TJ
        TZ
        TH
        TL
        TG
        TK
        TO
        TT
        TA
        TN
        TR
        TM
        TC
        TV
        UG
        UA
        AE
        GB
        US
        UM
        UY
        UZ
        VU
        VE
        VN
        VG
        WF
        EH
        YE
        ZM
        ZW
        ZZ
      }

      enum __PREFIX__ShopifyCurrencyCode {
        USD
        EUR
        GBP
        CAD
        AFN
        ALL
        DZD
        AOA
        ARS
        AMD
        AWG
        AUD
        BBD
        AZN
        BDT
        BSD
        BHD
        BIF
        BZD
        BMD
        BTN
        BAM
        BRL
        BOB
        BWP
        BND
        BGN
        MMK
        KHR
        CVE
        KYD
        XAF
        CLP
        CNY
        COP
        KMF
        CDF
        CRC
        HRK
        CZK
        DKK
        DOP
        XCD
        EGP
        ETB
        XPF
        FJD
        GMD
        GHS
        GTQ
        GYD
        GEL
        HTG
        HNL
        HKD
        HUF
        ISK
        INR
        IDR
        ILS
        IQD
        JMD
        JPY
        JEP
        JOD
        KZT
        KES
        KWD
        KGS
        LAK
        LVL
        LBP
        LSL
        LRD
        LTL
        MGA
        MKD
        MOP
        MWK
        MVR
        MXN
        MYR
        MUR
        MDL
        MAD
        MNT
        MZN
        NAD
        NPR
        ANG
        NZD
        NIO
        NGN
        NOK
        OMR
        PAB
        PKR
        PGK
        PYG
        PEN
        PHP
        PLN
        QAR
        RON
        RUB
        RWF
        WST
        SAR
        STD
        RSD
        SCR
        SGD
        SDG
        SYP
        ZAR
        KRW
        SSP
        SBD
        LKR
        SRD
        SZL
        SEK
        CHF
        TWD
        THB
        TZS
        TTD
        TND
        TRY
        TMT
        UGX
        UAH
        AED
        UYU
        UZS
        VUV
        VND
        XOF
        YER
        ZMW
        BYN
        BYR @deprecated(reason: \\"\`BYR\` is deprecated. Use \`BYN\` available from version \`2021-01\` onwards instead.\\")
        DJF
        ERN
        FKP
        GIP
        GNF
        IRR
        KID
        LYD
        MRU
        SLL
        SHP
        SOS
        TJS
        TOP
        VEF @deprecated(reason: \\"\`VEF\` is deprecated. Use \`VES\` available from version \`2020-10\` onwards instead.\\")
        VES
        XXX
      }

      type __PREFIX__ShopifyEditableProperty {
        locked: Boolean!
        reason: String
      }

      type __PREFIX__ShopifyFileError {
        code: __PREFIX__ShopifyFileErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyFileErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyFileStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyImage {
        altText: String
        height: Int
        originalSrc: String!
        src: String!
        transformedSrc: String!
        width: Int
      }

      type __PREFIX__ShopifyLink {
        label: String!
        url: String!
      }

      type __PREFIX__ShopifyMoneyV2 {
        amount: Float!
        currencyCode: __PREFIX__ShopifyCurrencyCode!
      }

      type __PREFIX__ShopifyResourceFeedback {
        details: [__PREFIX__ShopifyAppFeedback!]!
        summary: String!
      }

      type __PREFIX__ShopifySEO {
        description: String
        title: String
      }

      type __PREFIX__ShopifyUserError {
        field: [String!]
        message: String!
      }

      enum __PREFIX__ShopifyWeightUnit {
        KILOGRAMS
        GRAMS
        POUNDS
        OUNCES
      }
    ",
      "
      type __PREFIX__ShopifyExternalVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        embeddedUrl: String!
        host: __PREFIX__ShopifyMediaHost!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      interface __PREFIX__ShopifyMedia implements Node @dontInfer {
        alt: String
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      enum __PREFIX__ShopifyMediaContentType {
        VIDEO
        EXTERNAL_VIDEO
        MODEL_3D
        IMAGE
      }

      type __PREFIX__ShopifyMediaError {
        code: __PREFIX__ShopifyMediaErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyMediaErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyMediaHost {
        YOUTUBE
        VIMEO
      }

      type __PREFIX__ShopifyMediaImage implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        createdAt: Date! @dateformat
        fileErrors: [__PREFIX__ShopifyFileError!]!
        fileStatus: __PREFIX__ShopifyFileStatus!
        id: ID!
        image: __PREFIX__ShopifyImage
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        mimeType: String
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyMediaPreviewImage {
        image: __PREFIX__ShopifyImage
        status: __PREFIX__ShopifyMediaPreviewImageStatus!
      }

      enum __PREFIX__ShopifyMediaPreviewImageStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      enum __PREFIX__ShopifyMediaStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyModel3d implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyModel3dSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        sources: [__PREFIX__ShopifyModel3dSource!]!
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyModel3dSource {
        filesize: Int!
        format: String!
        mimeType: String!
        url: String!
      }

      type __PREFIX__ShopifyVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyVideoSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        sources: [__PREFIX__ShopifyVideoSource!]!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyVideoSource {
        format: String!
        height: Int!
        mimeType: String!
        url: String!
        width: Int!
      }
    ",
      "
      type __PREFIX__ShopifyMetafield implements Node @dontInfer {
        createdAt: Date! @dateformat
        description: String
        id: ID!
        key: String!
        legacyResourceId: String!
        namespace: String!
        ownerType: __PREFIX__ShopifyMetafieldOwnerType!
        shopifyId: String!
        type: String!
        updatedAt: Date! @dateformat
        value: String!
        valueType: String! @deprecated(reason: \\"\`valueType\` is deprecated and replaced by \`type\` in API version 2021-07.\\")
      }

      enum __PREFIX__ShopifyMetafieldOwnerType {
        ARTICLE
        BLOG
        COLLECTION
        CUSTOMER
        DRAFTORDER
        ORDER
        PAGE
        PRODUCT
        PRODUCTIMAGE
        PRODUCTVARIANT
        SHOP
      }
    ",
      "
      type __PREFIX__ShopifyProduct implements Node @dontInfer {
        _featuredMedia: String! # Temporary field so we don't break existing users
        createdAt: Date! @dateformat
        description: String!
        descriptionHtml: String!
        featuredImage: __PREFIX__ShopifyImage
        featuredMedia: __PREFIX__ShopifyMedia @link(from: \\"_featuredMedia\\", by: \\"id\\")
        feedback: __PREFIX__ShopifyResourceFeedback
        giftCardTemplateSuffix: String
        handle: String!
        hasOnlyDefaultVariant: Boolean!
        hasOutOfStockVariants: Boolean!
        id: ID!
        isGiftCard: Boolean!
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        mediaCount: Int! @proxy(from: \\"mediaCount.count\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        onlineStorePreviewUrl: String
        onlineStoreUrl: String
        options: [__PREFIX__ShopifyProductOption!]!
        priceRange: __PREFIX__ShopifyProductPriceRange! @deprecated(reason: \\"Deprecated in API version 2020-10. Use \`priceRangeV2\` instead.\\")
        priceRangeV2: __PREFIX__ShopifyProductPriceRangeV2!
        productType: String!
        publishedAt: Date @dateformat
        requiresSellingPlan: Boolean!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        seo: __PREFIX__ShopifySEO!
        shopifyId: String!
        status: __PREFIX__ShopifyProductStatus!
        storefrontId: String!
        tags: [String!]!
        templateSuffix: String
        title: String!
        totalInventory: Int!
        totalVariants: Int!
        tracksInventory: Boolean!
        updatedAt: Date! @dateformat
        variants: [__PREFIX__ShopifyProductVariant!]! @link(from: \\"variants___NODE\\", by: \\"id\\")
        vendor: String!
      }

      type __PREFIX__ShopifyProductOption {
        name: String!
        position: Int!
        shopifyId: String!
        values: [String!]!
      }

      type __PREFIX__ShopifyProductPriceRange {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifyProductPriceRangeV2 {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      enum __PREFIX__ShopifyProductStatus {
        ACTIVE
        ARCHIVED
        DRAFT
      }
    ",
      "
      type __PREFIX__ShopifyProductVariant implements Node @dontInfer {
        _product: String! # Temporary field so we don't break existing users
        availableForSale: Boolean!
        barcode: String
        compareAtPrice: Float
        createdAt: Date! @dateformat
        displayName: String!
        id: ID!
        image: __PREFIX__ShopifyImage
        inventoryPolicy: __PREFIX__ShopifyProductVariantInventoryPolicy!
        inventoryQuantity: Int
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        position: Int!
        presentmentPrices: [__PREFIX__ShopifyProductVariantPricePair!]!
        price: Float!
        product: __PREFIX__ShopifyProduct! @link(from: \\"_product\\", by: \\"id\\")
        requiresShipping: Boolean! @deprecated(reason: \\"Use \`InventoryItem.requiresShipping\` instead.\\")
        selectedOptions: [__PREFIX__ShopifySelectedOption!]!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        sku: String
        shopifyId: String!
        storefrontId: String!
        taxCode: String
        taxable: Boolean!
        title: String!
        updatedAt: Date! @dateformat
        weight: Float
        weightUnit: __PREFIX__ShopifyWeightUnit!
      }

      enum __PREFIX__ShopifyProductVariantInventoryPolicy {
        DENY
        CONTINUE
      }

      type __PREFIX__ShopifyProductVariantPricePair {
        compareAtPrice: __PREFIX__ShopifyMoneyV2
        price: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifySelectedOption {
        name: String!
        value: String!
      }
    ",
      "
      extend type __PREFIX__ShopifyImage {
        localFile: File @link(from: \\"localFile___NODE\\", by: \\"id\\")
      }
    ",
    ],
  ],
]
`;

exports[`createSchemaCustomization Creates the correct definitions without downloadImages and with connections 1`] = `
Array [
  Array [
    Array [
      "
      type __PREFIX__ShopifyApp {
        shopifyId: String!
      }

      type __PREFIX__ShopifyAppFeedback {
        app: __PREFIX__ShopifyApp!
        link: __PREFIX__ShopifyLink
        messages: [__PREFIX__ShopifyUserError!]!
      }

      enum __PREFIX__ShopifyCountryCode {
        AF
        AX
        AL
        DZ
        AD
        AO
        AI
        AG
        AR
        AM
        AW
        AC
        AU
        AT
        AZ
        BS
        BH
        BD
        BB
        BY
        BE
        BZ
        BJ
        BM
        BT
        BO
        BA
        BW
        BV
        BR
        IO
        BN
        BG
        BF
        BI
        KH
        CA
        CV
        BQ
        KY
        CF
        TD
        CL
        CN
        CX
        CC
        CO
        KM
        CG
        CD
        CK
        CR
        HR
        CU
        CW
        CY
        CZ
        CI
        DK
        DJ
        DM
        DO
        EC
        EG
        SV
        GQ
        ER
        EE
        SZ
        ET
        FK
        FO
        FJ
        FI
        FR
        GF
        PF
        TF
        GA
        GM
        GE
        DE
        GH
        GI
        GR
        GL
        GD
        GP
        GT
        GG
        GN
        GW
        GY
        HT
        HM
        VA
        HN
        HK
        HU
        IS
        IN
        ID
        IR
        IQ
        IE
        IM
        IL
        IT
        JM
        JP
        JE
        JO
        KZ
        KE
        KI
        KP
        XK
        KW
        KG
        LA
        LV
        LB
        LS
        LR
        LY
        LI
        LT
        LU
        MO
        MG
        MW
        MY
        MV
        ML
        MT
        MQ
        MR
        MU
        YT
        MX
        MD
        MC
        MN
        ME
        MS
        MA
        MZ
        MM
        NA
        NR
        NP
        NL
        AN
        NC
        NZ
        NI
        NE
        NG
        NU
        NF
        MK
        NO
        OM
        PK
        PS
        PA
        PG
        PY
        PE
        PH
        PN
        PL
        PT
        QA
        CM
        RE
        RO
        RU
        RW
        BL
        SH
        KN
        LC
        MF
        PM
        WS
        SM
        ST
        SA
        SN
        RS
        SC
        SL
        SG
        SX
        SK
        SI
        SB
        SO
        ZA
        GS
        KR
        SS
        ES
        LK
        VC
        SD
        SR
        SJ
        SE
        CH
        SY
        TW
        TJ
        TZ
        TH
        TL
        TG
        TK
        TO
        TT
        TA
        TN
        TR
        TM
        TC
        TV
        UG
        UA
        AE
        GB
        US
        UM
        UY
        UZ
        VU
        VE
        VN
        VG
        WF
        EH
        YE
        ZM
        ZW
        ZZ
      }

      enum __PREFIX__ShopifyCurrencyCode {
        USD
        EUR
        GBP
        CAD
        AFN
        ALL
        DZD
        AOA
        ARS
        AMD
        AWG
        AUD
        BBD
        AZN
        BDT
        BSD
        BHD
        BIF
        BZD
        BMD
        BTN
        BAM
        BRL
        BOB
        BWP
        BND
        BGN
        MMK
        KHR
        CVE
        KYD
        XAF
        CLP
        CNY
        COP
        KMF
        CDF
        CRC
        HRK
        CZK
        DKK
        DOP
        XCD
        EGP
        ETB
        XPF
        FJD
        GMD
        GHS
        GTQ
        GYD
        GEL
        HTG
        HNL
        HKD
        HUF
        ISK
        INR
        IDR
        ILS
        IQD
        JMD
        JPY
        JEP
        JOD
        KZT
        KES
        KWD
        KGS
        LAK
        LVL
        LBP
        LSL
        LRD
        LTL
        MGA
        MKD
        MOP
        MWK
        MVR
        MXN
        MYR
        MUR
        MDL
        MAD
        MNT
        MZN
        NAD
        NPR
        ANG
        NZD
        NIO
        NGN
        NOK
        OMR
        PAB
        PKR
        PGK
        PYG
        PEN
        PHP
        PLN
        QAR
        RON
        RUB
        RWF
        WST
        SAR
        STD
        RSD
        SCR
        SGD
        SDG
        SYP
        ZAR
        KRW
        SSP
        SBD
        LKR
        SRD
        SZL
        SEK
        CHF
        TWD
        THB
        TZS
        TTD
        TND
        TRY
        TMT
        UGX
        UAH
        AED
        UYU
        UZS
        VUV
        VND
        XOF
        YER
        ZMW
        BYN
        BYR @deprecated(reason: \\"\`BYR\` is deprecated. Use \`BYN\` available from version \`2021-01\` onwards instead.\\")
        DJF
        ERN
        FKP
        GIP
        GNF
        IRR
        KID
        LYD
        MRU
        SLL
        SHP
        SOS
        TJS
        TOP
        VEF @deprecated(reason: \\"\`VEF\` is deprecated. Use \`VES\` available from version \`2020-10\` onwards instead.\\")
        VES
        XXX
      }

      type __PREFIX__ShopifyEditableProperty {
        locked: Boolean!
        reason: String
      }

      type __PREFIX__ShopifyFileError {
        code: __PREFIX__ShopifyFileErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyFileErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyFileStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyImage {
        altText: String
        height: Int
        originalSrc: String!
        src: String!
        transformedSrc: String!
        width: Int
      }

      type __PREFIX__ShopifyLink {
        label: String!
        url: String!
      }

      type __PREFIX__ShopifyMoneyV2 {
        amount: Float!
        currencyCode: __PREFIX__ShopifyCurrencyCode!
      }

      type __PREFIX__ShopifyResourceFeedback {
        details: [__PREFIX__ShopifyAppFeedback!]!
        summary: String!
      }

      type __PREFIX__ShopifySEO {
        description: String
        title: String
      }

      type __PREFIX__ShopifyUserError {
        field: [String!]
        message: String!
      }

      enum __PREFIX__ShopifyWeightUnit {
        KILOGRAMS
        GRAMS
        POUNDS
        OUNCES
      }
    ",
      "
      type __PREFIX__ShopifyExternalVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        embeddedUrl: String!
        host: __PREFIX__ShopifyMediaHost!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      interface __PREFIX__ShopifyMedia implements Node @dontInfer {
        alt: String
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      enum __PREFIX__ShopifyMediaContentType {
        VIDEO
        EXTERNAL_VIDEO
        MODEL_3D
        IMAGE
      }

      type __PREFIX__ShopifyMediaError {
        code: __PREFIX__ShopifyMediaErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyMediaErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyMediaHost {
        YOUTUBE
        VIMEO
      }

      type __PREFIX__ShopifyMediaImage implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        createdAt: Date! @dateformat
        fileErrors: [__PREFIX__ShopifyFileError!]!
        fileStatus: __PREFIX__ShopifyFileStatus!
        id: ID!
        image: __PREFIX__ShopifyImage
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        mimeType: String
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyMediaPreviewImage {
        image: __PREFIX__ShopifyImage
        status: __PREFIX__ShopifyMediaPreviewImageStatus!
      }

      enum __PREFIX__ShopifyMediaPreviewImageStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      enum __PREFIX__ShopifyMediaStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyModel3d implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyModel3dSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        sources: [__PREFIX__ShopifyModel3dSource!]!
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyModel3dSource {
        filesize: Int!
        format: String!
        mimeType: String!
        url: String!
      }

      type __PREFIX__ShopifyVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyVideoSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        sources: [__PREFIX__ShopifyVideoSource!]!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyVideoSource {
        format: String!
        height: Int!
        mimeType: String!
        url: String!
        width: Int!
      }
    ",
      "
      type __PREFIX__ShopifyMetafield implements Node @dontInfer {
        createdAt: Date! @dateformat
        description: String
        id: ID!
        key: String!
        legacyResourceId: String!
        namespace: String!
        ownerType: __PREFIX__ShopifyMetafieldOwnerType!
        shopifyId: String!
        type: String!
        updatedAt: Date! @dateformat
        value: String!
        valueType: String! @deprecated(reason: \\"\`valueType\` is deprecated and replaced by \`type\` in API version 2021-07.\\")
      }

      enum __PREFIX__ShopifyMetafieldOwnerType {
        ARTICLE
        BLOG
        COLLECTION
        CUSTOMER
        DRAFTORDER
        ORDER
        PAGE
        PRODUCT
        PRODUCTIMAGE
        PRODUCTVARIANT
        SHOP
      }
    ",
      "
      type __PREFIX__ShopifyProduct implements Node @dontInfer {
        _featuredMedia: String! # Temporary field so we don't break existing users
        createdAt: Date! @dateformat
        description: String!
        descriptionHtml: String!
        featuredImage: __PREFIX__ShopifyImage
        featuredMedia: __PREFIX__ShopifyMedia @link(from: \\"_featuredMedia\\", by: \\"id\\")
        feedback: __PREFIX__ShopifyResourceFeedback
        giftCardTemplateSuffix: String
        handle: String!
        hasOnlyDefaultVariant: Boolean!
        hasOutOfStockVariants: Boolean!
        id: ID!
        isGiftCard: Boolean!
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        mediaCount: Int! @proxy(from: \\"mediaCount.count\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        onlineStorePreviewUrl: String
        onlineStoreUrl: String
        options: [__PREFIX__ShopifyProductOption!]!
        priceRange: __PREFIX__ShopifyProductPriceRange! @deprecated(reason: \\"Deprecated in API version 2020-10. Use \`priceRangeV2\` instead.\\")
        priceRangeV2: __PREFIX__ShopifyProductPriceRangeV2!
        productType: String!
        publishedAt: Date @dateformat
        requiresSellingPlan: Boolean!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        seo: __PREFIX__ShopifySEO!
        shopifyId: String!
        status: __PREFIX__ShopifyProductStatus!
        storefrontId: String!
        tags: [String!]!
        templateSuffix: String
        title: String!
        totalInventory: Int!
        totalVariants: Int!
        tracksInventory: Boolean!
        updatedAt: Date! @dateformat
        variants: [__PREFIX__ShopifyProductVariant!]! @link(from: \\"variants___NODE\\", by: \\"id\\")
        vendor: String!
      }

      type __PREFIX__ShopifyProductOption {
        name: String!
        position: Int!
        shopifyId: String!
        values: [String!]!
      }

      type __PREFIX__ShopifyProductPriceRange {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifyProductPriceRangeV2 {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      enum __PREFIX__ShopifyProductStatus {
        ACTIVE
        ARCHIVED
        DRAFT
      }
    ",
      "
      type __PREFIX__ShopifyProductVariant implements Node @dontInfer {
        _product: String! # Temporary field so we don't break existing users
        availableForSale: Boolean!
        barcode: String
        compareAtPrice: Float
        createdAt: Date! @dateformat
        displayName: String!
        id: ID!
        image: __PREFIX__ShopifyImage
        inventoryPolicy: __PREFIX__ShopifyProductVariantInventoryPolicy!
        inventoryQuantity: Int
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        position: Int!
        presentmentPrices: [__PREFIX__ShopifyProductVariantPricePair!]!
        price: Float!
        product: __PREFIX__ShopifyProduct! @link(from: \\"_product\\", by: \\"id\\")
        requiresShipping: Boolean! @deprecated(reason: \\"Use \`InventoryItem.requiresShipping\` instead.\\")
        selectedOptions: [__PREFIX__ShopifySelectedOption!]!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        sku: String
        shopifyId: String!
        storefrontId: String!
        taxCode: String
        taxable: Boolean!
        title: String!
        updatedAt: Date! @dateformat
        weight: Float
        weightUnit: __PREFIX__ShopifyWeightUnit!
      }

      enum __PREFIX__ShopifyProductVariantInventoryPolicy {
        DENY
        CONTINUE
      }

      type __PREFIX__ShopifyProductVariantPricePair {
        compareAtPrice: __PREFIX__ShopifyMoneyV2
        price: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifySelectedOption {
        name: String!
        value: String!
      }
    ",
      "
      type __PREFIX__ShopifyCollection implements Node @dontInfer {
        description: String!
        descriptionHtml: String!
        feedback: __PREFIX__ShopifyResourceFeedback
        handle: String!
        id: ID!
        image: __PREFIX__ShopifyImage
        legacyResourceId: String!
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        products: [__PREFIX__ShopifyProduct!]! @link(from: \\"products___NODE\\", by: \\"id\\")
        productsCount: Int! @proxy(from: \\"productsCount.count\\")
        ruleSet: __PREFIX__ShopifyCollectionRuleSet
        seo: __PREFIX__ShopifySEO!
        shopifyId: String!
        sortOrder: __PREFIX__ShopifyCollectionSortOrder!
        storefrontId: String!
        templateSuffix: String
        title: String!
        updatedAt: Date! @dateformat
      }

      type __PREFIX__ShopifyCollectionRule {
        column: __PREFIX__ShopifyCollectionRuleColumn!
        condition: String!
        relation: __PREFIX__ShopifyCollectionRuleRelation!
      }

      enum __PREFIX__ShopifyCollectionRuleColumn {
        TAG
        TITLE
        TYPE
        VENDOR
        VARIANT_PRICE
        IS_PRICE_REDUCED
        VARIANT_COMPARE_AT_PRICE
        VARIANT_WEIGHT
        VARIANT_INVENTORY
        VARIANT_TITLE
      }

      enum __PREFIX__ShopifyCollectionRuleRelation {
        CONTAINS
        ENDS_WITH
        EQUALS
        GREATER_THAN
        IS_NOT_SET
        IS_SET
        LESS_THAN
        NOT_CONTAINS
        NOT_EQUALS
        STARTS_WITH
      }

      type __PREFIX__ShopifyCollectionRuleSet {
        appliedDisjunctively: Boolean!
        rules: [__PREFIX__ShopifyCollectionRule!]!
      }

      enum __PREFIX__ShopifyCollectionSortOrder {
        ALPHA_ASC
        ALPHA_DESC
        BEST_SELLING
        CREATED
        CREATED_DESC
        MANUAL
        PRICE_ASC
        PRICE_DESC
      }

      extend type __PREFIX__ShopifyProduct {
        collections: [__PREFIX__ShopifyCollection!]! @link(from: \\"collections___NODE\\", by: \\"id\\")
      }
    ",
      "
      type __PREFIX__ShopifyFulfillmentService {
        callbackUrl: String
        fulfillmentOrdersOptIn: Boolean!
        handle: String!
        inventoryManagement: Boolean!
        productBased: Boolean! @deprecated(reason: \\"\`productBased\` will be removed in version 2024-07, non-product based fulfillment services are no longer supported\\")
        serviceName: String!
        shippingMethods: [__PREFIX__ShopifyShippingMethod!]!
        shopifyId: String!
        type: __PREFIX__ShopifyFulfillmentServiceType!
      }

      enum __PREFIX__ShopifyFulfillmentServiceType {
        GIFT_CARD
        MANUAL
        THIRD_PARTY
      }

      type __PREFIX__ShopifyInventoryItem {
        countryCodeOfOrigin: __PREFIX__ShopifyCountryCode
        createdAt: Date! @dateformat
        duplicateSkuCount: Int!
        harmonizedSystemCode: String
        inventoryHistoryUrl: String
        inventoryLevels: [__PREFIX__ShopifyInventoryLevel!]! @link(by: \\"id\\") @proxy(from: \\"inventoryLevels___NODE\\", fromNode: true)
        legacyResourceId: String!
        locationsCount: Int! @proxy(from: \\"locationsCount.count\\")
        provinceCodeOfOrigin: String
        requiresShipping: Boolean!
        shopifyId: String!
        sku: String
        tracked: Boolean!
        trackedEditable: __PREFIX__ShopifyEditableProperty!
        unitCost: __PREFIX__ShopifyMoneyV2
        updatedAt: Date! @dateformat
        variant: __PREFIX__ShopifyProductVariantConnection!
      }

      type __PREFIX__ShopifyInventoryQuantity {
        name: String!
        quantity: Int!
      }

      type __PREFIX__ShopifyInventoryLevel implements Node @dontInfer {
        _location: String! # Temporary field so we don't break existing users
        quantities: [__PREFIX__ShopifyInventoryQuantity!]!
        available: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"available\\")
        incoming: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"incoming\\")
        committed: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"committed\\")
        reserved: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"reserved\\")
        damaged: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"damaged\\")
        safety_stock: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"safety_stock\\")
        quality_control: Int! @proxy(from: \\"quantities\\") @selectQuantityByName(name: \\"quality_control\\")
        id: ID!
        location: __PREFIX__ShopifyLocation! @link(from: \\"_location\\", by: \\"id\\")
        shopifyId: String!
      }

      type __PREFIX__ShopifyLocation implements Node @dontInfer {
        activatable: Boolean!
        address: __PREFIX__ShopifyLocationAddress!
        addressVerified: Boolean!
        deactivatable: Boolean!
        deactivatedAt: String
        deletable: Boolean!
        fulfillmentService: __PREFIX__ShopifyFulfillmentService
        fulfillsOnlineOrders: Boolean!
        hasActiveInventory: Boolean!
        hasUnfulfilledOrders: Boolean!
        id: ID!
        isActive: Boolean!
        legacyResourceId: String!
        name: String!
        shipsInventory: Boolean!
        shopifyId: String!
      }

      type __PREFIX__ShopifyLocationAddress {
        address1: String
        address2: String
        city: String
        country: String
        countryCode: String
        formatted: [String!]!
        latitude: Float
        longitude: Float
        phone: String
        province: String
        provinceCode: String
        zip: String
      }

      type __PREFIX__ShopifyShippingMethod {
        code: String!
        label: String!
      }

      extend type __PREFIX__ShopifyProductVariant {
        inventoryItem: __PREFIX__ShopifyInventoryItem!
      }
    ",
      "
      type __PREFIX__ShopifyLineItem implements Node @dontInfer {
        _product: String! # Temporary field so we don't break existing users
        id: ID!
        product: __PREFIX__ShopifyProduct @link(from: \\"_product\\", by: \\"id\\")
        shopifyId: String!
      }

      type __PREFIX__ShopifyOrder implements Node @dontInfer {
        closed: Boolean!
        closedAt: Date @dateformat
        edited: Boolean!
        id: ID!
        lineItems: [__PREFIX__ShopifyLineItem!]! @link(from: \\"lineItems___NODE\\", by: \\"id\\")
        refunds: [__PREFIX__ShopifyRefund!]!
        shopifyId: String!
      }

      type __PREFIX__ShopifyRefund {
        createdAt: Date @dateformat
        shopifyId: String!
      }
    ",
    ],
  ],
]
`;

exports[`createSchemaCustomization Creates the correct definitions without downloadImages and without connections 1`] = `
Array [
  Array [
    Array [
      "
      type __PREFIX__ShopifyApp {
        shopifyId: String!
      }

      type __PREFIX__ShopifyAppFeedback {
        app: __PREFIX__ShopifyApp!
        link: __PREFIX__ShopifyLink
        messages: [__PREFIX__ShopifyUserError!]!
      }

      enum __PREFIX__ShopifyCountryCode {
        AF
        AX
        AL
        DZ
        AD
        AO
        AI
        AG
        AR
        AM
        AW
        AC
        AU
        AT
        AZ
        BS
        BH
        BD
        BB
        BY
        BE
        BZ
        BJ
        BM
        BT
        BO
        BA
        BW
        BV
        BR
        IO
        BN
        BG
        BF
        BI
        KH
        CA
        CV
        BQ
        KY
        CF
        TD
        CL
        CN
        CX
        CC
        CO
        KM
        CG
        CD
        CK
        CR
        HR
        CU
        CW
        CY
        CZ
        CI
        DK
        DJ
        DM
        DO
        EC
        EG
        SV
        GQ
        ER
        EE
        SZ
        ET
        FK
        FO
        FJ
        FI
        FR
        GF
        PF
        TF
        GA
        GM
        GE
        DE
        GH
        GI
        GR
        GL
        GD
        GP
        GT
        GG
        GN
        GW
        GY
        HT
        HM
        VA
        HN
        HK
        HU
        IS
        IN
        ID
        IR
        IQ
        IE
        IM
        IL
        IT
        JM
        JP
        JE
        JO
        KZ
        KE
        KI
        KP
        XK
        KW
        KG
        LA
        LV
        LB
        LS
        LR
        LY
        LI
        LT
        LU
        MO
        MG
        MW
        MY
        MV
        ML
        MT
        MQ
        MR
        MU
        YT
        MX
        MD
        MC
        MN
        ME
        MS
        MA
        MZ
        MM
        NA
        NR
        NP
        NL
        AN
        NC
        NZ
        NI
        NE
        NG
        NU
        NF
        MK
        NO
        OM
        PK
        PS
        PA
        PG
        PY
        PE
        PH
        PN
        PL
        PT
        QA
        CM
        RE
        RO
        RU
        RW
        BL
        SH
        KN
        LC
        MF
        PM
        WS
        SM
        ST
        SA
        SN
        RS
        SC
        SL
        SG
        SX
        SK
        SI
        SB
        SO
        ZA
        GS
        KR
        SS
        ES
        LK
        VC
        SD
        SR
        SJ
        SE
        CH
        SY
        TW
        TJ
        TZ
        TH
        TL
        TG
        TK
        TO
        TT
        TA
        TN
        TR
        TM
        TC
        TV
        UG
        UA
        AE
        GB
        US
        UM
        UY
        UZ
        VU
        VE
        VN
        VG
        WF
        EH
        YE
        ZM
        ZW
        ZZ
      }

      enum __PREFIX__ShopifyCurrencyCode {
        USD
        EUR
        GBP
        CAD
        AFN
        ALL
        DZD
        AOA
        ARS
        AMD
        AWG
        AUD
        BBD
        AZN
        BDT
        BSD
        BHD
        BIF
        BZD
        BMD
        BTN
        BAM
        BRL
        BOB
        BWP
        BND
        BGN
        MMK
        KHR
        CVE
        KYD
        XAF
        CLP
        CNY
        COP
        KMF
        CDF
        CRC
        HRK
        CZK
        DKK
        DOP
        XCD
        EGP
        ETB
        XPF
        FJD
        GMD
        GHS
        GTQ
        GYD
        GEL
        HTG
        HNL
        HKD
        HUF
        ISK
        INR
        IDR
        ILS
        IQD
        JMD
        JPY
        JEP
        JOD
        KZT
        KES
        KWD
        KGS
        LAK
        LVL
        LBP
        LSL
        LRD
        LTL
        MGA
        MKD
        MOP
        MWK
        MVR
        MXN
        MYR
        MUR
        MDL
        MAD
        MNT
        MZN
        NAD
        NPR
        ANG
        NZD
        NIO
        NGN
        NOK
        OMR
        PAB
        PKR
        PGK
        PYG
        PEN
        PHP
        PLN
        QAR
        RON
        RUB
        RWF
        WST
        SAR
        STD
        RSD
        SCR
        SGD
        SDG
        SYP
        ZAR
        KRW
        SSP
        SBD
        LKR
        SRD
        SZL
        SEK
        CHF
        TWD
        THB
        TZS
        TTD
        TND
        TRY
        TMT
        UGX
        UAH
        AED
        UYU
        UZS
        VUV
        VND
        XOF
        YER
        ZMW
        BYN
        BYR @deprecated(reason: \\"\`BYR\` is deprecated. Use \`BYN\` available from version \`2021-01\` onwards instead.\\")
        DJF
        ERN
        FKP
        GIP
        GNF
        IRR
        KID
        LYD
        MRU
        SLL
        SHP
        SOS
        TJS
        TOP
        VEF @deprecated(reason: \\"\`VEF\` is deprecated. Use \`VES\` available from version \`2020-10\` onwards instead.\\")
        VES
        XXX
      }

      type __PREFIX__ShopifyEditableProperty {
        locked: Boolean!
        reason: String
      }

      type __PREFIX__ShopifyFileError {
        code: __PREFIX__ShopifyFileErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyFileErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyFileStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyImage {
        altText: String
        height: Int
        originalSrc: String!
        src: String!
        transformedSrc: String!
        width: Int
      }

      type __PREFIX__ShopifyLink {
        label: String!
        url: String!
      }

      type __PREFIX__ShopifyMoneyV2 {
        amount: Float!
        currencyCode: __PREFIX__ShopifyCurrencyCode!
      }

      type __PREFIX__ShopifyResourceFeedback {
        details: [__PREFIX__ShopifyAppFeedback!]!
        summary: String!
      }

      type __PREFIX__ShopifySEO {
        description: String
        title: String
      }

      type __PREFIX__ShopifyUserError {
        field: [String!]
        message: String!
      }

      enum __PREFIX__ShopifyWeightUnit {
        KILOGRAMS
        GRAMS
        POUNDS
        OUNCES
      }
    ",
      "
      type __PREFIX__ShopifyExternalVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        embeddedUrl: String!
        host: __PREFIX__ShopifyMediaHost!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      interface __PREFIX__ShopifyMedia implements Node @dontInfer {
        alt: String
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      enum __PREFIX__ShopifyMediaContentType {
        VIDEO
        EXTERNAL_VIDEO
        MODEL_3D
        IMAGE
      }

      type __PREFIX__ShopifyMediaError {
        code: __PREFIX__ShopifyMediaErrorCode!
        details: String
        message: String!
      }

      enum __PREFIX__ShopifyMediaErrorCode {
        UNKNOWN
        INVALID_SIGNED_URL
        IMAGE_DOWNLOAD_FAILURE
        IMAGE_PROCESSING_FAILURE
        MEDIA_TIMEOUT_ERROR
        EXTERNAL_VIDEO_NOT_FOUND
        EXTERNAL_VIDEO_UNLISTED
        EXTERNAL_VIDEO_INVALID_ASPECT_RATIO
        EXTERNAL_VIDEO_EMBED_DISABLED
        EXTERNAL_VIDEO_EMBED_NOT_FOUND_OR_TRANSCODING
        GENERIC_FILE_DOWNLOAD_FAILURE
        GENERIC_FILE_INVALID_SIZE
        VIDEO_METADATA_READ_ERROR
        VIDEO_INVALID_FILETYPE_ERROR
        VIDEO_MIN_WIDTH_ERROR
        VIDEO_MAX_WIDTH_ERROR
        VIDEO_MIN_HEIGHT_ERROR
        VIDEO_MAX_HEIGHT_ERROR
        VIDEO_MIN_DURATION_ERROR
        VIDEO_MAX_DURATION_ERROR
        VIDEO_VALIDATION_ERROR
        MODEL3D_VALIDATION_ERROR
        MODEL3D_THUMBNAIL_GENERATION_ERROR
        MODEL3D_GLB_TO_USDZ_CONVERSION_ERROR
        MODEL3D_GLB_OUTPUT_CREATION_ERROR
        UNSUPPORTED_IMAGE_FILE_TYPE
        INVALID_IMAGE_FILE_SIZE
        INVALID_IMAGE_ASPECT_RATIO
        INVALID_IMAGE_RESOLUTION
        FILE_STORAGE_LIMIT_EXCEEDED
      }

      enum __PREFIX__ShopifyMediaHost {
        YOUTUBE
        VIMEO
      }

      type __PREFIX__ShopifyMediaImage implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        createdAt: Date! @dateformat
        fileErrors: [__PREFIX__ShopifyFileError!]!
        fileStatus: __PREFIX__ShopifyFileStatus!
        id: ID!
        image: __PREFIX__ShopifyImage
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        mimeType: String
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyMediaPreviewImage {
        image: __PREFIX__ShopifyImage
        status: __PREFIX__ShopifyMediaPreviewImageStatus!
      }

      enum __PREFIX__ShopifyMediaPreviewImageStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      enum __PREFIX__ShopifyMediaStatus {
        UPLOADED
        PROCESSING
        READY
        FAILED
      }

      type __PREFIX__ShopifyModel3d implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyModel3dSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        sources: [__PREFIX__ShopifyModel3dSource!]!
        shopifyId: String!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyModel3dSource {
        filesize: Int!
        format: String!
        mimeType: String!
        url: String!
      }

      type __PREFIX__ShopifyVideo implements Node & __PREFIX__ShopifyMedia @dontInfer {
        alt: String
        filename: String!
        id: ID!
        mediaContentType: __PREFIX__ShopifyMediaContentType!
        mediaErrors: [__PREFIX__ShopifyMediaError!]!
        originalSource: __PREFIX__ShopifyVideoSource
        preview: __PREFIX__ShopifyMediaPreviewImage
        shopifyId: String!
        sources: [__PREFIX__ShopifyVideoSource!]!
        status: __PREFIX__ShopifyMediaStatus!
      }

      type __PREFIX__ShopifyVideoSource {
        format: String!
        height: Int!
        mimeType: String!
        url: String!
        width: Int!
      }
    ",
      "
      type __PREFIX__ShopifyMetafield implements Node @dontInfer {
        createdAt: Date! @dateformat
        description: String
        id: ID!
        key: String!
        legacyResourceId: String!
        namespace: String!
        ownerType: __PREFIX__ShopifyMetafieldOwnerType!
        shopifyId: String!
        type: String!
        updatedAt: Date! @dateformat
        value: String!
        valueType: String! @deprecated(reason: \\"\`valueType\` is deprecated and replaced by \`type\` in API version 2021-07.\\")
      }

      enum __PREFIX__ShopifyMetafieldOwnerType {
        ARTICLE
        BLOG
        COLLECTION
        CUSTOMER
        DRAFTORDER
        ORDER
        PAGE
        PRODUCT
        PRODUCTIMAGE
        PRODUCTVARIANT
        SHOP
      }
    ",
      "
      type __PREFIX__ShopifyProduct implements Node @dontInfer {
        _featuredMedia: String! # Temporary field so we don't break existing users
        createdAt: Date! @dateformat
        description: String!
        descriptionHtml: String!
        featuredImage: __PREFIX__ShopifyImage
        featuredMedia: __PREFIX__ShopifyMedia @link(from: \\"_featuredMedia\\", by: \\"id\\")
        feedback: __PREFIX__ShopifyResourceFeedback
        giftCardTemplateSuffix: String
        handle: String!
        hasOnlyDefaultVariant: Boolean!
        hasOutOfStockVariants: Boolean!
        id: ID!
        isGiftCard: Boolean!
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        mediaCount: Int! @proxy(from: \\"mediaCount.count\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        onlineStorePreviewUrl: String
        onlineStoreUrl: String
        options: [__PREFIX__ShopifyProductOption!]!
        priceRange: __PREFIX__ShopifyProductPriceRange! @deprecated(reason: \\"Deprecated in API version 2020-10. Use \`priceRangeV2\` instead.\\")
        priceRangeV2: __PREFIX__ShopifyProductPriceRangeV2!
        productType: String!
        publishedAt: Date @dateformat
        requiresSellingPlan: Boolean!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        seo: __PREFIX__ShopifySEO!
        shopifyId: String!
        status: __PREFIX__ShopifyProductStatus!
        storefrontId: String!
        tags: [String!]!
        templateSuffix: String
        title: String!
        totalInventory: Int!
        totalVariants: Int!
        tracksInventory: Boolean!
        updatedAt: Date! @dateformat
        variants: [__PREFIX__ShopifyProductVariant!]! @link(from: \\"variants___NODE\\", by: \\"id\\")
        vendor: String!
      }

      type __PREFIX__ShopifyProductOption {
        name: String!
        position: Int!
        shopifyId: String!
        values: [String!]!
      }

      type __PREFIX__ShopifyProductPriceRange {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifyProductPriceRangeV2 {
        maxVariantPrice: __PREFIX__ShopifyMoneyV2!
        minVariantPrice: __PREFIX__ShopifyMoneyV2!
      }

      enum __PREFIX__ShopifyProductStatus {
        ACTIVE
        ARCHIVED
        DRAFT
      }
    ",
      "
      type __PREFIX__ShopifyProductVariant implements Node @dontInfer {
        _product: String! # Temporary field so we don't break existing users
        availableForSale: Boolean!
        barcode: String
        compareAtPrice: Float
        createdAt: Date! @dateformat
        displayName: String!
        id: ID!
        image: __PREFIX__ShopifyImage
        inventoryPolicy: __PREFIX__ShopifyProductVariantInventoryPolicy!
        inventoryQuantity: Int
        legacyResourceId: String!
        media: [__PREFIX__ShopifyMedia!]! @link(from: \\"media___NODE\\", by: \\"id\\")
        metafield(namespace: String! key: String!): __PREFIX__ShopifyMetafield
        metafields: [__PREFIX__ShopifyMetafield!]! @link(from: \\"metafields___NODE\\", by: \\"id\\")
        position: Int!
        presentmentPrices: [__PREFIX__ShopifyProductVariantPricePair!]!
        price: Float!
        product: __PREFIX__ShopifyProduct! @link(from: \\"_product\\", by: \\"id\\")
        requiresShipping: Boolean! @deprecated(reason: \\"Use \`InventoryItem.requiresShipping\` instead.\\")
        selectedOptions: [__PREFIX__ShopifySelectedOption!]!
        sellingPlanGroupCount: Int! @proxy(from: \\"sellingPlanGroupsCount.count\\")
        sku: String
        shopifyId: String!
        storefrontId: String!
        taxCode: String
        taxable: Boolean!
        title: String!
        updatedAt: Date! @dateformat
        weight: Float
        weightUnit: __PREFIX__ShopifyWeightUnit!
      }

      enum __PREFIX__ShopifyProductVariantInventoryPolicy {
        DENY
        CONTINUE
      }

      type __PREFIX__ShopifyProductVariantPricePair {
        compareAtPrice: __PREFIX__ShopifyMoneyV2
        price: __PREFIX__ShopifyMoneyV2!
      }

      type __PREFIX__ShopifySelectedOption {
        name: String!
        value: String!
      }
    ",
    ],
  ],
]
`;
